2004-10-27  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/darwin-weakimport-1.c: New.

2004-10-28  Ben Elliston  <bje@au.ibm.com>

	* gcc.dg/tree-ssa/sra-1.c: Pass --param sra-max-structure-size.

2004-10-27  Nathan Sidwell  <nathan@codesourcery.com>

	* gcc.dg/cpp/direct2.c: Cope with different bison 'parse' or
	'syntax' error messages.
	* gcc.dg/cpp/direct2s.c: Likewise.

2004-10-26  Geoffrey Keating  <geoffk@apple.com>

	* gcc.c-torture/compile/20041026-1.c: New.

2004-10-26  Mark Mitchell  <mark@codesourcery.com>

	PR c++/18093
	* g++.dg/lookup/ns2.C: New test.

	PR c++/18020
	* g++.dg/template/enum4.C: New test.

	PR c++/18161
	* g++.dg/template/expr1.C: New test.

2004-10-26  Ben Elliston  <bje@au.ibm.com>

	* gcc.dg/tree-ssa/20030922-2.c: Now passing, so remove xfail.

2004-10-26  Joseph S. Myers  <jsm@polyomino.org.uk>

	* gcc.dg/decl-nospec-1.c, gcc.dg/decl-nospec-2.c,
	gcc.dg/decl-nospec-3.c: New tests.

2004-10-26  Ziemowit Laski  <zlaski@apple.com>

	* objc.dg/super-class-3.m: New test.

2004-10-26  Nathan Sidwell  <nathan@codesourcery.com>

	* gcc.dg/cpp/direct2.c: Adjust expected errors, robustify parser
	resyncing.
	* gcc.dg/cpp/direct2s.c: Likewise.

2004-10-25  Geoffrey Keating  <geoffk@apple.com>

	* objc.dg/image-info.m: Update for changes to section selection.

2004-10-25  David Ayers  <d.ayers@inode.at>
	    Ziemowit Laski  <zlaski@apple.com>

	* objc.dg/call-super-2.m: Add messages to 'Class <Proto>'; update
	diagnostics when messaging 'id <Proto>'.
	* objc.dg/class-protocol-1.m: New test.
	* objc.dg/desig-init-1.m: Add message to an invalid receiver using
	a non-existent method signature.
	* objc.dg/method-5.m, objc.dg/method-6.m, objc.dg/proto-hier-1.m:
	Update diagnostics when messaging with non-existent method signature.
	* objc.dg/proto-hier-2.m: Adjust wording of diagnostic.
	* objc.dg/proto-lossage-1.m, objc.dg/proto-lossage-4.m: Messages to
	invalid receivers are now resolved as if messaging 'id'; remove
	extraneous diagnostics.
